FlightPath 7.x Changelog
========================

2024-05-25
  Added PHP version to System status page.
  
  Removed more warnings which appear in PHP 8.2.
  
  Added extra help (and the way that fp_get_js_alert() function shows a ? link) for selecting a catalog year from
  the admin console.
  

2024-04-24
  Updated README.txt for information re: the silk icon set.


2024-04-08
  Removed possible exploit vector that would have allowed users without the proper permissions to submit
  the "report contact" form.
  
  Added new constants to bootstrap.inc, indiating location of jquery and jquery ui.  This lets us update 
  either of those files/locations later on, without disrupting custom scripts.
  
  Modification to SMTP module to add MessageID to sent emails.

  General cleanup of old files.


2024-03-26
  Various changes and fixes to remove warnings for PHP 8.2
  

2024-03-20
  To fix XSS vulnerability, modified Content module to disallow dangerous HTML (like script tags)
  in titles.


2024-03-15
  Fixed various deprecated warnings for PHP 8.2.
  
  Fixed issue where substitutions were no longer working, due to changes in how PHP 8.2
  compares numbers and strings.
  
  Added new function fp_trim(), which is meant to act as a drop-in replacement for trim(),
  except that it can accept NULL or FALSE and return ''.  Regular trim() cannot do this
  without triggering a deprecated warning.
  

2024-01-26
  Fixing warnings in stats module.
  

2024-01-07
  Updated signalwire library for PHP 8.x, made modifications to it for FlightPath (removed need for \twilio\Fax, which wasn't included)

  Continuing to clean code of deprecated an warning messages.
  
  Added a more robust UID when sending calendar invites, to better ensure uniqueness.
 
  DatabaseHandler->get_student_name() returns "Unknown Student" if it cannot find the student.

  Had an issue where if a hidden form variable (using FAPI) was '0', then it was not correctly
  being handled in the Content module.

